# workout_api

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 12b6aed6a26d_initial.py
tests/: conftest.py  test_atleta.py  test_categoria.py  test_centro_treinamento.py  utils.py
tests/factory/: atleta.py  categoria.py  centro_treinamento.py
workout_api/: main.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/configs/: database.py  settings.py
workout_api/contrib/: dependencies.py
